[PSPIEL-150] updated deleteAppointment function
[PSPIEL-150] updated docs with delete appointment endpoint details
