# modules/appointment/appointment.controller.js
@@ -1,6 +1,7 @@
 const appointmentService = require('./appointment.service')
 const validator = require('../../utils/schemaValidator')
 const schema = require('./appointment.schema')
+const { DatabaseError } = require('sequelize')
 
 const appointmentList = async (req, res, next) => {
   try {
@@ -34,11 +35,14 @@ const updateAppointment = async (req, res, next) => {
 
 const deleteAppointment = async (req, res, next) => {
   try {
-    const params = await validator.validate(schema.updateAppointment, req.body)
-    await appointmentService.deleteAppointment(params)
-    res.status(200).json({
-      message: 'appoinment data deleted successfully'
-    })
+    if (req.params.id) {
+      await appointmentService.deleteAppointment(req.params.id)
+      res.status(200).json({
+        message: 'Appointment deleted'
+      })
+    } else {
+      throw new DatabaseError('Missing appointment id in request url')
+    }
   } catch (err) {
     next(err)
   }
@@ -134,7 +138,6 @@ const bookAppointment = async (req, res, next) => {
 }
 
 const locationModuleErrorHandler = (err, req, res, next) => {
-  console.log(err)
   switch (err.name) {
     case 'DbError':
       res.status(400).json({
